src/lex.c
/* Generated by re2c 1.0.1 on Fri Feb  4 17:49:48 2022 */
// lex.re
#include "../localTypes.h"
#include "../gram.h"
                                   // end of re2c block

#define COMMENT_TOKEN -2


static s32 lexIdent(u8 *YYCURSOR, s32 length)
{
	//~ u8 *YYCURSOR = sourceCode;
	u8 *YYMARKER;
	
switch (length)
{
	case 1:
	
{
	u8 yych;
	yych = *YYCURSOR;
	if (yych == 'f') goto yy4;
	++YYCURSOR;
	{ return IDENT; }
yy4:
	++YYCURSOR;
	{ return F; }
}
                                  // end of re2c block
	case 2:
	
{
	u8 yych;
	yych = *YYCURSOR;
	if (yych == 'i') goto yy10;
	if (yych == 'u') goto yy11;
	++YYCURSOR;
yy9:
	{ return IDENT; }
yy10:
	yych = *++YYCURSOR;
	if (yych == 'f') goto yy12;
	goto yy9;
yy11:
	yych = *++YYCURSOR;
	if (yych == '8') goto yy14;
	goto yy9;
yy12:
	++YYCURSOR;
	{ return IF; }
yy14:
	++YYCURSOR;
	{ return U8; }
}
                                  // end of re2c block
	case 3:
	
{
	u8 yych;
	yych = *YYCURSOR;
	if (yych == 's') goto yy20;
	++YYCURSOR;
yy19:
	{ return IDENT; }
yy20:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych != '3') goto yy19;
	yych = *++YYCURSOR;
	if (yych == '2') goto yy23;
	YYCURSOR = YYMARKER;
	goto yy19;
yy23:
	++YYCURSOR;
	{ return S32; }
}
                                  // end of re2c block
	case 4:
	
{
	u8 yych;
	yych = *YYCURSOR++;
	{ return IDENT; }
}
                                  // end of re2c block
	case 5:
	
{
	u8 yych;
	yych = *YYCURSOR++;
	{ return IDENT; }
}
                                  // end of re2c block
	case 6:
	
{
	u8 yych;
	yych = *YYCURSOR;
	if (yych <= 'q') goto yy35;
	if (yych <= 'r') goto yy37;
	if (yych <= 's') goto yy38;
yy35:
	++YYCURSOR;
yy36:
	{ return IDENT; }
yy37:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'e') goto yy39;
	goto yy36;
yy38:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 't') goto yy41;
	goto yy36;
yy39:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy42;
yy40:
	YYCURSOR = YYMARKER;
	goto yy36;
yy41:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy43;
	goto yy40;
yy42:
	yych = *++YYCURSOR;
	if (yych == 'u') goto yy44;
	goto yy40;
yy43:
	yych = *++YYCURSOR;
	if (yych == 'u') goto yy45;
	goto yy40;
yy44:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy46;
	goto yy40;
yy45:
	yych = *++YYCURSOR;
	if (yych == 'c') goto yy47;
	goto yy40;
yy46:
	yych = *++YYCURSOR;
	if (yych == 'n') goto yy48;
	goto yy40;
yy47:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy50;
	goto yy40;
yy48:
	++YYCURSOR;
	{ return RETURN; }
yy50:
	++YYCURSOR;
	{ return STRUCT; }
}
                                  // end of re2c block
	case 7:
	
{
	u8 yych;
	yych = *YYCURSOR++;
	{ return IDENT; }
}
                                  // end of re2c block
	case 8:
	
{
	u8 yych;
	yych = *YYCURSOR++;
	{ return IDENT; }
}
                                  // end of re2c block
	default: return IDENT;
}
}

/*e*/
u8* lex(u8 *sourceCode, TokenInfo *t)/*p;*/
{
	u8 *YYCURSOR = sourceCode;
	u8 *YYMARKER;
	u8 *start;


	loop:
	start = YYCURSOR;

	
{
	u8 yych;
	unsigned int yyaccept = 0;
	yych = *YYCURSOR;
	if (yych <= '.') {
		if (yych <= '!') {
			if (yych <= '\n') {
				if (yych <= 0x00) goto yy62;
				if (yych <= 0x08) goto yy64;
				if (yych <= '\t') goto yy66;
				goto yy68;
			} else {
				if (yych <= '\r') {
					if (yych <= '\f') goto yy64;
					goto yy66;
				} else {
					if (yych == ' ') goto yy66;
					goto yy64;
				}
			}
		} else {
			if (yych <= ')') {
				if (yych <= '"') goto yy70;
				if (yych <= '\'') goto yy64;
				if (yych <= '(') goto yy71;
				goto yy73;
			} else {
				if (yych <= '+') {
					if (yych <= '*') goto yy64;
					goto yy75;
				} else {
					if (yych <= ',') goto yy77;
					if (yych <= '-') goto yy79;
					goto yy64;
				}
			}
		}
	} else {
		if (yych <= '@') {
			if (yych <= ':') {
				if (yych <= '/') goto yy81;
				if (yych <= '0') goto yy82;
				if (yych <= '9') goto yy84;
				goto yy64;
			} else {
				if (yych <= '<') {
					if (yych <= ';') goto yy86;
					goto yy64;
				} else {
					if (yych <= '=') goto yy88;
					if (yych <= '>') goto yy90;
					goto yy64;
				}
			}
		} else {
			if (yych <= '`') {
				if (yych <= 'Z') goto yy92;
				if (yych == '_') goto yy92;
				goto yy64;
			} else {
				if (yych <= '{') {
					if (yych <= 'z') goto yy92;
					goto yy95;
				} else {
					if (yych == '}') goto yy97;
					goto yy64;
				}
			}
		}
	}
yy62:
	++YYCURSOR;
	{
		t->tokenType = 0;
		return YYCURSOR - 1;
	}
yy64:
	++YYCURSOR;
yy65:
	{
		t->tokenType = 0;
		io_printi(t->lineNumber);
		io_prints(" :lexical error\n");
		return 0;
	}
yy66:
	++YYCURSOR;
	{ goto loop; }
yy68:
	++YYCURSOR;
	{
		t->lineNumber++;
		goto loop;
	}
yy70:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= 0x00) goto yy65;
	goto yy100;
yy71:
	++YYCURSOR;
	{
		t->tokenType = LPAREN;
		return YYCURSOR;
	}
yy73:
	++YYCURSOR;
	{
		t->tokenType = RPAREN;
		return YYCURSOR;
	}
yy75:
	++YYCURSOR;
	{
		t->tokenType = PLUS;
		return YYCURSOR;
	}
yy77:
	++YYCURSOR;
	{
		t->tokenType = COMMA;
		return YYCURSOR;
	}
yy79:
	++YYCURSOR;
	{
		t->tokenType = SUBT;
		return YYCURSOR;
	}
yy81:
	yych = *++YYCURSOR;
	if (yych == '/') goto yy106;
	goto yy65;
yy82:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'x') goto yy109;
	goto yy85;
yy83:
	{
		t->tokenType = INTEGER;
		t->length    = s2i(start);
		return YYCURSOR;
	}
yy84:
	yych = *++YYCURSOR;
yy85:
	if (yych <= '/') goto yy83;
	if (yych <= '9') goto yy84;
	goto yy83;
yy86:
	++YYCURSOR;
	{
		t->tokenType = SEMI;
		return YYCURSOR;
	}
yy88:
	++YYCURSOR;
	{
		t->tokenType = ASSIGN;
		return YYCURSOR;
	}
yy90:
	++YYCURSOR;
	{
		t->tokenType = GT;
		return YYCURSOR;
	}
yy92:
	yych = *++YYCURSOR;
	if (yych <= '>') {
		if (yych <= ',') {
			if (yych == '!') goto yy92;
		} else {
			if (yych <= '-') goto yy92;
			if (yych <= '/') goto yy94;
			if (yych <= '9') goto yy92;
		}
	} else {
		if (yych <= '^') {
			if (yych == '@') goto yy94;
			if (yych <= 'Z') goto yy92;
		} else {
			if (yych == '`') goto yy94;
			if (yych <= 'z') goto yy92;
		}
	}
yy94:
	{
		t->string    = start;
		t->length    = YYCURSOR - start;
		t->tokenType = lexIdent(start, YYCURSOR - start);
		return YYCURSOR;
	}
yy95:
	++YYCURSOR;
	{
		t->tokenType = LBLOCK;
		return YYCURSOR;
	}
yy97:
	++YYCURSOR;
	{
		t->tokenType = RBLOCK;
		return YYCURSOR;
	}
yy99:
	yych = *++YYCURSOR;
yy100:
	if (yych <= '"') {
		if (yych <= 0x00) goto yy101;
		if (yych <= '!') goto yy99;
		goto yy102;
	} else {
		if (yych == '\\') goto yy104;
		goto yy99;
	}
yy101:
	YYCURSOR = YYMARKER;
	if (yyaccept <= 1) {
		if (yyaccept == 0) {
			goto yy65;
		} else {
			goto yy83;
		}
	} else {
		goto yy103;
	}
yy102:
	++YYCURSOR;
yy103:
	{
		t->tokenType = STRING_LIT;
		start++;
		t->string = start;
		t->length = YYCURSOR - start - 1;
		return YYCURSOR;
	}
yy104:
	yych = *++YYCURSOR;
	if (yych <= '"') {
		if (yych <= 0x00) goto yy101;
		if (yych <= '!') goto yy99;
		goto yy110;
	} else {
		if (yych == '\\') goto yy104;
		goto yy99;
	}
yy106:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy108;
	if (yych != '\n') goto yy106;
yy108:
	{
		t->tokenType = COMMENT_TOKEN;
		t->string = start;
		t->length = YYCURSOR - start;
		return YYCURSOR;
	}
yy109:
	yych = *++YYCURSOR;
	if (yych <= '/') goto yy101;
	if (yych <= '9') goto yy111;
	if (yych <= '@') goto yy101;
	if (yych <= 'F') goto yy111;
	goto yy101;
yy110:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= '"') {
		if (yych <= 0x00) goto yy103;
		if (yych <= '!') goto yy99;
		goto yy102;
	} else {
		if (yych == '\\') goto yy104;
		goto yy99;
	}
yy111:
	yych = *++YYCURSOR;
	if (yych <= '/') goto yy83;
	if (yych <= '9') goto yy111;
	if (yych <= '@') goto yy83;
	if (yych <= 'F') goto yy111;
	goto yy83;
}
                                  // end of re2c block
}
